Refactor: folder Structure
